building the carosel

--- a/src/assests/home.css
+++ b/src/assests/home.css
@@ -116,13 +116,17 @@ p:hover:after {
 	color: #1f0322;
 	line-height: 32px;
 }
-h1 {
+.first-title {
 	font-size: 120px;
 	font-weight: 1000;
 	font-family: 'Oswald', sans-serif;
 	color: #1f0322;
 }
-.second-name {
+.second-title {
+	font-size: 120px;
+	font-weight: 1000;
+	font-family: 'Oswald', sans-serif;
+	color: #1f0322;
 	margin-left: 60px;
 }
 /* Card */
