--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -3,7 +3,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	overflow: hidden;
+	/* overflow: hidden; */
 	line-height: 0;
 }
 
@@ -17,4 +17,29 @@
 
 .custom-shape-divider-top-1592842874 .shape-fill {
 	fill: #e59500;
+}
+
+.port-title-container {
+	position: absolute;
+	top: 19%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	left: 45%;
+	height: 100vh;
+	width: 100vw;
+	color: #1f0322;
+	line-height: 32px;
+}
+
+.portfolio-title {
+	font-size: 120px;
+	font-weight: 1000;
+	font-family: 'Oswald', sans-serif;
+	color: #1f0322;
+}
+.carosel{
+	position: absolute;
+	margin-top: 50%;
+
 }
