--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -1,5 +1,5 @@
 .custom-shape-divider-top-1592842874 {
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -8,7 +8,7 @@
 }
 
 .custom-shape-divider-top-1592842874 svg {
-	position: relative;
+	/* position: relative; */
 	display: block;
 	width: calc(100% + 1.3px);
 	height: 500px;
@@ -38,8 +38,45 @@
 	font-family: 'Oswald', sans-serif;
 	color: #1f0322;
 }
-.carosel{
+.slides .slick-prev,
+.slides .slick-next {
 	position: absolute;
-	margin-top: 50%;
+	top: 50%;
+	z-index: 1;
+}
 
+.slides {
+	position: relative;
+}
+
+.slides .slick-prev,
+.slides .slick-next {
+	position: absolute;
+	top: 50%;
+	z-index: 1;
+}
+
+.slides .slick-prev {
+	left: 5%;
+}
+
+.slides .slick-next {
+	right: 63%;
+}
+.carousel {
+	margin-top: 15%;
+	margin-left: 8%;
+}
+img {
+	width: 40%;
+	height: 40%;
+	border-radius: 5%;
+}
+.carousel-section {
+	float: left;
+	width: 100%;
+	height: 90px;
+}
+.bookmark-container {
+	float: right;
 }
