--- a/src/assests/home.css
+++ b/src/assests/home.css
@@ -39,7 +39,7 @@
 	z-index: 1;
 	list-style-type: none;
 }
-p {
+.nav-title {
 	display: inline-block;
 	height: 10%;
 	text-decoration: none;
@@ -56,7 +56,7 @@ p {
 	margin-top: 30px;
 }
 
-p:after {
+.nav-title:after {
 	content: "";
 	position: absolute;
 	height: 4px;
@@ -72,12 +72,12 @@ p:after {
 	text-decoration: none;
 }
 
-p:hover {
+.nav-title:hover {
 	color: #1f0322;
 	text-decoration: none;
 }
 
-p:hover:after {
+.nav-title:hover:after {
 	width: 100%;
 	text-decoration: none;
 }
@@ -134,3 +134,17 @@ p:hover:after {
 	height: 200px;
 	width: 200px;
 } */
+@media only screen and (max-width: 600px) {
+  .pannels {
+	width: 100%;
+	height: 100%;
+  }
+  .nav{
+	  width: 300px;
+	  margin-left: 30px;
+  }
+  .nav-title{
+	  height: 10%;
+	  padding: 7px;
+  }
+}
