--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -61,22 +61,63 @@
 }
 
 .slides .slick-next {
-	right: 63%;
+	right: 20%;
 }
 .carousel {
-	margin-top: 15%;
-	margin-left: 8%;
+	margin-top: 30%;
+	margin-left: 15%;
+	
 }
 img {
-	width: 40%;
+	width: 85%;
 	height: 40%;
 	border-radius: 5%;
 }
 .carousel-section {
-	float: left;
 	width: 100%;
 	height: 90px;
 }
-.bookmark-container {
-	float: right;
+.bookmark-container{
+	margin-top: 30%;
+}
+.bookmark-title{
+	font-family: 'Roboto', sans-serif;
+	letter-spacing: 1px;
+	font-weight: bold;
+     color: #1f0322;
+}
+.bookmark-paragraph{
+	margin-top: 3%;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .custom-shape-divider-top-1592842874{
+	  width: 100%;
+  }
+  .custom-shape-divider-top-1592842874 svg{
+	  width: 100%;
+
+  }
+  .custom-shape-divider-top-1592842874 .shape-fill{
+	width: 100%;
+  }
+  .portfolio-title{
+	  font-size: 72px;
+	  margin-left: 4%;  
+  }
+  .port-title-container{
+	  left: 3%;
+  }
+  .carousel{
+	  margin-top: 60%;
+	  margin-left: 10%;
+  }
+  .bookmark-container{
+	   margin-top: 0%;
+	   padding: 37px;
+	 
+
+  }
+ 
 }
