--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -1,7 +1,6 @@
 .custom-shape-divider-top-1592842874 {
 	/* position: absolute; */
-	top: 0;
-	left: 0;
+	/* d */
 	width: 100%;
 	/* overflow: hidden; */
 	line-height: 0;
@@ -9,7 +8,7 @@
 
 .custom-shape-divider-top-1592842874 svg {
 	/* position: relative; */
-	display: block;
+	/* display: block; */
 	width: calc(100% + 1.3px);
 	height: 500px;
 	transform: rotateY(180deg);
@@ -40,18 +39,13 @@
 }
 .slides .slick-prev,
 .slides .slick-next {
-	position: absolute;
 	top: 50%;
-	z-index: 1;
-}
-
-.slides {
-	position: relative;
+	/* z-index: 1; */
 }
 
 .slides .slick-prev,
 .slides .slick-next {
-	position: absolute;
+	/* position: absolute; */
 	top: 50%;
 	z-index: 1;
 }
@@ -64,11 +58,10 @@
 	right: 20%;
 }
 .carousel {
-	margin-top: 30%;
+	margin-top: 40%;
 	margin-left: 15%;
-	
 }
-img {
+.image {
 	width: 85%;
 	height: 40%;
 	border-radius: 5%;
@@ -77,47 +70,54 @@ img {
 	width: 100%;
 	height: 90px;
 }
-.bookmark-container{
-	margin-top: 30%;
+.bookmark-container {
+	margin-top: 40%;
 }
-.bookmark-title{
+.bookmark-title {
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: 1px;
 	font-weight: bold;
-     color: #1f0322;
+	color: #1f0322;
 }
-.bookmark-paragraph{
+.bookmark-paragraph {
 	margin-top: 3%;
 }
 
+.airbaby-section {
+	width: 100%;
+	height: 90%;
+	background-color: white;
+}
+.footer {
+	background-image: linear-gradient(135deg, #9f05ff69 10%, #fd5e086b 100%);
+	color: whitesmoke;
+	height: 3pc;
+	width: 100%;
+}
 
 @media only screen and (max-width: 600px) {
-  .custom-shape-divider-top-1592842874{
-	  width: 100%;
-  }
-  .custom-shape-divider-top-1592842874 svg{
-	  width: 100%;
-
-  }
-  .custom-shape-divider-top-1592842874 .shape-fill{
-	width: 100%;
-  }
-  .portfolio-title{
-	  font-size: 72px;
-	  margin-left: 4%;  
-  }
-  .port-title-container{
-	  left: 3%;
-  }
-  .carousel{
-	  margin-top: 60%;
-	  margin-left: 10%;
-  }
-  .bookmark-container{
-	   margin-top: 0%;
-	   padding: 37px;
-	 
-
-  }
- 
+	.custom-shape-divider-top-1592842874 {
+		width: 100%;
+	}
+	.custom-shape-divider-top-1592842874 svg {
+		width: 100%;
+	}
+	.custom-shape-divider-top-1592842874 .shape-fill {
+		width: 100%;
+	}
+	.portfolio-title {
+		font-size: 72px;
+		margin-left: 4%;
+	}
+	.port-title-container {
+		left: 3%;
+	}
+	.carousel {
+		margin-top: 60%;
+		margin-left: 10%;
+	}
+	.bookmark-container {
+		margin-top: 0%;
+		padding: 37px;
+	}
 }
