--- a/src/assests/about.css
+++ b/src/assests/about.css
@@ -64,3 +64,42 @@
 .picture-section {
 	margin-top: 10%;
 }
+.about-footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	bottom: 0;
+	width: 100%;
+	height: 200px;
+	background-color: #a30b37;
+}
+.aboutMe-section {
+	position: relative;
+	margin: 130px;
+	height: 450px;
+	width: 80%;
+	background-color: white;
+	border-radius: 3%;
+}
+
+.about-text-conatiner1 {
+	font-size: 1.1rem;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 500;
+	color: #1f0322;
+	letter-spacing: 1px;
+	position: absolute;
+	margin-top: 13%;
+	margin-left: 20%;
+	width: 60%;
+}
+.about-text-conatiner2 {
+	font-size: 1.1rem;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 500;
+	color: #1f0322;
+	letter-spacing: 1px;
+	position: absolute;
+	margin-top: 13%;
+	width: 80%;
+}
