--- a/src/assests/about.css
+++ b/src/assests/about.css
@@ -1,3 +1,5 @@
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
 .custom-shape-divider-top-1593002502 {
 	/* position: absolute; */
 	top: 0;
@@ -102,4 +104,73 @@
 	position: absolute;
 	margin-top: 13%;
 	width: 80%;
+}
+
+.scroll-to-top {
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	z-index: 1;
+}
+.contact-button{
+	margin: 20px;
+	font-family: 'Oswald', sans-serif;
+	background-color: #1f0322;
+	color: white;
+	padding: 10px;
+	border: none;
+	width: 90px;
+	height: 70px;
+	border-radius: 7%;
+	font-size: 23px;
+	transition: all .2s ease-in-out;
+}
+.contact-button:hover {
+	transform: scale(1.3);
+}
+.top-button{
+	font-family: 'Oswald', sans-serif;
+	background-color: #1f0322;
+	color: white;
+	padding: 10px;
+	border: none;
+	width: 90px;
+	height: 70px;
+	border-radius: 7%;
+	font-size: 23px;
+	transition: all .2s ease-in-out;
+}
+.top-button:hover {
+	transform: scale(1.3);
+}
+
+.scroll-to-top .icon {
+	margin-top: 10px;
+	animation: scrollTop 0.5s alternate ease infinite;
+}
+@keyframes scrollTop {
+	form {
+		transform: translateY(2px);
+	}
+	to {
+		transform: translateY(-1px);
+	}
+}
+@media only screen and (max-width: 600px) {
+	.custom-shape-divider-top-1593002502 {
+		width: 100%;
+	}
+	.custom-shape-divider-top-1593002502 svg {
+		width: 100%;
+	}
+	.custom-shape-divider-top-1593002502 .shape-fill {
+		width: 100%;
+	}
+	.about-title {
+		font-size: 72px;
+		margin-left: 4%;
+	}
+	.about-title-container {
+		left: 3%;
+	}
 }
