--- a/src/assests/contact.css
+++ b/src/assests/contact.css
@@ -1,108 +1,108 @@
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+@import '//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
 
-.SM-buttons{
-    position: absolute;
-    margin-top: 7%;
-    margin-left: 30%;
+.SM-buttons {
+	position: absolute;
+	margin-left: 7%;
 }
- .contact-ul {
-   position: relative;
-   display: flex;
-   transform-style: preserve-3d;
+.contact-ul {
+	position: relative;
+	display: flex;
+	transform-style: preserve-3d;
 }
 .contact-ul .contact-li {
-  position: relative;
-  list-style: none;
-  width: 60px;
-  height: 60px;
-  margin: 0px 20px;
+	position: relative;
+	list-style: none;
+	width: 60px;
+	height: 60px;
+	margin: 0px 20px;
 }
-.contact-ul .contact-li:before{
-  content: '';
-  position: absolute;
-  bottom: -10px;
-  left: -5px;
-  width: 100%;
-  height: 10px;
-  background: #2a2a2a;
-  transform-origin: top;
-  transform: skewX(-41deg);
+.contact-ul .contact-li:before {
+	content: '';
+	position: absolute;
+	bottom: -10px;
+	left: -5px;
+	width: 100%;
+	height: 10px;
+	background: #2a2a2a;
+	transform-origin: top;
+	transform: skewX(-41deg);
 }
-.contact-ul .contact-li:after{
-  content: '';
-  position: absolute;
-  top:5px;
-  left: -9px;
-  width: 9px;
-  height: 100%;
-  background: #2a2a2a;
-  transform-origin: right;
-  transform: skewY(-49deg);
+.contact-ul .contact-li:after {
+	content: '';
+	position: absolute;
+	top: 5px;
+	left: -9px;
+	width: 9px;
+	height: 100%;
+	background: #2a2a2a;
+	transform-origin: right;
+	transform: skewY(-49deg);
 }
-.contact-ul .contact-li span{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex !important;
-  background: #2a2a2a;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-size: 30px !important;
-  transition: 1.5s ease-out;
+.contact-ul .contact-li span {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex !important;
+	background: #2a2a2a;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 30px !important;
+	transition: 1.5s ease-out;
 }
 .contact-ul .contact-li:hover span {
-  z-index: 1000;
-  transition: .3s;
-  color: #fff;
-  box-shadow: -1px 1px 1px rgba(0, 0, 0, .5);
+	z-index: 1000;
+	transition: .3s;
+	color: #fff;
+	box-shadow: -1px 1px 1px rgba(0, 0, 0, .5);
 }
-.contact-ul .contact-li:hover span:nth-child(5){
-  transform: translate(40px, -40px);
-  opacity: 1;
+.contact-ul .contact-li:hover span:nth-child(5) {
+	transform: translate(40px, -40px);
+	opacity: 1;
 }
-.contact-ul .contact-li:hover span:nth-child(4){
-  transform: translate(30px, -30px);
-  opacity: .8;
+.contact-ul .contact-li:hover span:nth-child(4) {
+	transform: translate(30px, -30px);
+	opacity: .8;
 }
-.contact-ul .contact-li:hover span:nth-child(3){
-  transform: translate(20px, -20px);
-  opacity: .6;
+.contact-ul .contact-li:hover span:nth-child(3) {
+	transform: translate(20px, -20px);
+	opacity: .6;
 }
-.contact-ul .contact-i:hover span:nth-child(2){
-  transform: translate(10px, -10px);
-  opacity: .4;
-}.contact-ul .contact-li:hover span:nth-child(1){
-  transform: translate(0px, 0px);
-  opacity: .2;
+.contact-ul .contact-i:hover span:nth-child(2) {
+	transform: translate(10px, -10px);
+	opacity: .4;
 }
-.contact-ul .contact-li:nth-child(1):hover span{
-  background: #52E19F !important;
+.contact-ul .contact-li:hover span:nth-child(1) {
+	transform: translate(0px, 0px);
+	opacity: .2;
 }
-.contact-ul .contact-li:nth-child(2):hover span{
-  background: #2C3456 !important;
+.contact-ul .contact-li:nth-child(1):hover span {
+	background: #52e19f !important;
 }
-.contact-ul .contact-li:nth-child(3):hover span{
-  background: #EA6E96 !important;
+.contact-ul .contact-li:nth-child(2):hover span {
+	background: #2c3456 !important;
 }
-.contact-ul .contact-li:nth-child(4):hover span{
-  background: #FCEB00 !important;
+.contact-ul .contact-li:nth-child(3):hover span {
+	background: #ea6e96 !important;
+}
+.contact-ul .contact-li:nth-child(4):hover span {
+	background: #fceb00 !important;
 }
 .custom-shape-divider-top-1593164997 {
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
 }
 
 .custom-shape-divider-top-1593164997 svg {
-    width: calc(141% + 1.3px);
-    height: 500px;
+	width: calc(141% + 1.3px);
+	height: 500px;
 }
 
 .custom-shape-divider-top-1593164997 .shape-fill {
-    fill: #CA8DFB;
+	fill: #ca8dfb;
 }
 .contact-title-container {
 	position: absolute;
@@ -123,11 +123,29 @@
 	font-family: 'Oswald', sans-serif;
 	color: #1f0322;
 }
-.contact-information{
-    display: flex;
-
+.contact-information {
+	display: flex;
+	margin-left: 0%;
 }
-
+.text-container-information {
+	margin-left: 90px;
+}
+.email-container-information {
+	margin-left: 40px;
+}
+.contact-container {
+	margin-top: 5%;
+}
+.information-title {
+	font-size: 20px;
+	font-weight: 1000;
+	font-family: 'Oswald', sans-serif;
+	color: #1f0322;
+}
+.information-paragrapgh {
+	font-family: 'Oswald', sans-serif;
+	color: #1f0322;
+}
 @media only screen and (max-width: 600px) {
 	.custom-shape-divider-top-1593164997 {
 		width: 100%;
@@ -144,17 +162,27 @@
 	}
 	.contact-title-container {
 		left: 3%;
-    }
-    .SM-buttons{
-        position: absolute;
-        margin-top: 30%;
-        margin-left: 0%;
-    }
-    .contact-ul .contact-li {
-        position: relative;
-        width: 60px;
-        height: 60px;
-        margin: 0px 10px;
-    }
-	
+	}
+	.SM-buttons {
+		position: absolute;
+		margin-top: 50%;
+		margin-left: 0%;
+	}
+	.contact-ul .contact-li {
+		position: relative;
+		width: 60px;
+		height: 60px;
+		margin: 0px 10px;
+		margin-left: 3px;
+	}
+	.contact-information {
+		margin-top: 30px;
+		margin-left: 0%;
+	}
+	.text-container-information {
+		margin-left: 0%;
+	}
+	.email-container-information {
+		margin-left: 7%;
+	}
 }
