--- a/src/assests/about.css
+++ b/src/assests/about.css
@@ -79,8 +79,8 @@
 	position: relative;
 	margin-top: 10%;
 	margin-bottom: 10%;
-	height: 450px;
 	width: 100%;
+	height: 500px;
 	background-color: white;
 	border-radius: 3%;
 }
@@ -91,20 +91,19 @@
 	font-weight: 500;
 	color: #1f0322;
 	letter-spacing: 1px;
-	position: absolute;
-	margin-top: 13%;
-	margin-left: 20%;
-	width: 60%;
+	margin-top: 12%;
+	margin-left: 40%;
+	width: 50%;
 }
+
 .about-text-conatiner2 {
 	font-size: 1.1rem;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 500;
 	color: #1f0322;
 	letter-spacing: 1px;
-	position: absolute;
-	margin-top: 13%;
-	width: 80%;
+	margin-top: 12%;
+	width: 65%;
 }
 
 .scroll-to-top {
@@ -184,14 +183,19 @@
 	.aboutMe-section {
 		margin: 0px;
 		width: 100%;
+		margin-top: 20%;
 	}
 	.about-footer {
 		bottom: 0;
 		width: 100%;
-		margin-top: 50%;
+		margin-top: 30%;
 	}
 	.about-text-conatiner1 {
+		margin-left: 5px;
+		width: 100%;
 	}
 	.about-text-conatiner2 {
+		margin-left: 5px;
+		width: 100%;
 	}
 }
