--- a/src/assests/about.css
+++ b/src/assests/about.css
@@ -62,9 +62,20 @@
 .image2:hover {
 	transform: scale(1.1);
 }
+.image3 {
+	width: 60%;
+	height: 281px;
+	border-radius: 5%;
+	margin: 15px;
+	transition: all .2s ease-in-out;
+}
+.image3:hover {
+	transform: scale(1.1);
+}
 
 .picture-section {
 	margin-top: 10%;
+	margin-bottom: 15%;
 }
 .about-footer {
 	display: flex;
@@ -73,15 +84,19 @@
 	bottom: 0;
 	width: 100%;
 	height: 200px;
+	margin-top: 15%;
 	background-color: #a30b37;
 }
 .aboutMe-section {
 	position: relative;
-	margin-top: 10%;
-	margin-bottom: 10%;
-	width: 100%;
-	height: 500px;
-	background-color: white;
+	z-index: 1;
+}
+.first-about-container {
+	margin-top: 12%;
+	margin-left: 14%;
+	width: 73%;
+	height: 351px;
+	background-color: whitesmoke;
 	border-radius: 3%;
 }
 
@@ -90,10 +105,9 @@
 	font-family: 'Oswald', sans-serif;
 	font-weight: 500;
 	color: #1f0322;
-	letter-spacing: 1px;
-	margin-top: 12%;
-	margin-left: 40%;
-	width: 50%;
+	letter-spacing: 0.5px;
+	width: 80%;
+	margin: 20px;
 }
 
 .about-text-conatiner2 {
@@ -101,9 +115,8 @@
 	font-family: 'Oswald', sans-serif;
 	font-weight: 500;
 	color: #1f0322;
-	letter-spacing: 1px;
-	margin-top: 12%;
-	width: 65%;
+	letter-spacing: 0.5px;
+	width: 90%;
 }
 
 .scroll-to-top {
@@ -124,9 +137,11 @@
 	border-radius: 7%;
 	font-size: 23px;
 	transition: all .2s ease-in-out;
+	box-shadow: 0px 0px 10px #1a1616;
 }
 .contact-button:hover {
 	transform: scale(1.3);
+	box-shadow: 0px 0px 8px #1a1616;
 }
 .top-button {
 	font-family: 'Oswald', sans-serif;
@@ -138,10 +153,13 @@
 	height: 70px;
 	border-radius: 7%;
 	font-size: 23px;
+	box-shadow: 0px 0px 10px #1a1616;
+
 	transition: all .2s ease-in-out;
 }
 .top-button:hover {
 	transform: scale(1.3);
+	box-shadow: 0px 0px 10px #1a1616;
 }
 
 .scroll-to-top .icon {
