--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -131,7 +131,7 @@
 	width: 100%;
 	height: 200px;
 	background-color: #e59500;
-	margin-top: 15%;
+	margin-top: 10%;
 }
 a {
 	text-decoration: none;
@@ -147,6 +147,34 @@ a:hover {
 	height: 300px;
 	width: 450px;
 }
+.project-section{
+	margin-top: 5%;
+	margin-left: 5%;
+}
+
+.project-title{
+	margin-top: 7%;
+	margin-left: 0%;
+	font-size: 60px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+}
+.messageBoard-conatiner{
+	margin-top: 5%;
+	width: 80%;
+	font-family: 'Roboto', sans-serif;
+}
+.meme-container{
+	margin-top: 5%;
+	width: 80%;
+	font-family: 'Roboto', sans-serif;
+}
+.check-container{
+	margin-top: 5%;
+	width: 80%;
+	font-family: 'Roboto', sans-serif;
+}
+
 
 @media only screen and (max-width: 600px) {
 	.custom-shape-divider-top-1592842874 {
@@ -167,10 +195,22 @@ a:hover {
 	}
 	.carousel {
 		margin-top: 60%;
-		margin-left: 10%;
+		margin-left: 0%;
 	}
 	.bookmark-container {
 		margin-top: 0%;
 		padding: 37px;
+		width: 100%;
+	}
+	.airbaby-container {
+		margin-top: 0%;
+		padding: 10px;
+	}
+	.image3{
+    height: 152px;
+	margin-left: 19%;
+	}
+	.airbaby-section{
+		width: 100%;
 	}
 }
