--- a/src/assests/portfolio.css
+++ b/src/assests/portfolio.css
@@ -96,7 +96,7 @@
 }
 
 .airbaby-container {
-	margin-top: 15%;
+	margin-top: 25%;
 }
 .airbaby-title {
 	font-family: 'Roboto', sans-serif;
@@ -116,7 +116,7 @@
 	width: 80%;
 }
 .airbaby-carousel {
-	margin-top: 20%;
+	margin-top: 30%;
 	margin-left: 10%;
 }
 
@@ -146,6 +146,7 @@ a:hover {
 .airbaby-image {
 	height: 300px;
 	width: 450px;
+	border-radius: 5%;
 }
 .project-section{
 	margin-top: 5%;
@@ -174,6 +175,9 @@ a:hover {
 	width: 80%;
 	font-family: 'Roboto', sans-serif;
 }
+.project-paragraph{
+	margin-top: 10px;
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -191,7 +195,7 @@ a:hover {
 		margin-left: 4%;
 	}
 	.port-title-container {
-		left: 3%;
+		left: 0%;
 	}
 	.carousel {
 		margin-top: 60%;
@@ -202,6 +206,9 @@ a:hover {
 		padding: 37px;
 		width: 100%;
 	}
+	.bookmark-paragraph{
+		width: 115%;
+	}
 	.airbaby-container {
 		margin-top: 0%;
 		padding: 10px;
@@ -211,6 +218,13 @@ a:hover {
 	margin-left: 19%;
 	}
 	.airbaby-section{
-		width: 100%;
+		margin: 0px;
+    	width: 100%;
+   	   height: 100%;
+   		margin-top: 0%;
+	}
+	.image{
+		height: 255px;
+		width: 310px
 	}
 }
