--- a/src/assests/about.css
+++ b/src/assests/about.css
@@ -90,10 +90,10 @@
 .aboutMe-section {
 	position: relative;
 	z-index: 1;
-	margin-top: 12%;
+	margin-top: 20%;
 	margin-left: 14%;
 	width: 73%;
-	height: 351px;
+	height: 440px;
 	background-color: whitesmoke;
 	border-radius: 3%;
 }
@@ -165,6 +165,10 @@
 	margin-top: 10px;
 	animation: scrollTop 0.5s alternate ease infinite;
 }
+
+.parallax {
+	height: 0px;
+}
 @keyframes scrollTop {
 	form {
 		transform: translateY(2px);
@@ -213,7 +217,6 @@
 		margin-left: 5px;
 		width: 100%;
 		margin-top: 0px;
-		
 	}
 	.about-text-conatiner2 {
 		margin-left: 5px;
